# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tilupy"
version = "1.0.0"
description = "Prepare and process thin-layer simulations"
readme = "README.md"
authors = [{ name = "Marc Peruzzetto", email = "m.peruzzetto@brgm.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: CeCILL-C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["thin-layer", "shallow-water", "display", "benchmark"]
dependencies = [
    "seaborn",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["rasterio"]

[tools.setuptools]
packages = ["src"]

[project.urls]
Homepage = "https://github.com/marcperuz/tilupy"

[project.scripts]
tilupy_plot = "tilupy.cmd:_tilupy_plot"