# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tilupy"
version = "v1.2.0"
description = "Thin-layer models unified processing tool"
readme = "README.md"
authors = [{ name = "Marc Peruzzetto", email = "m.peruzzetto@brgm.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: CeCILL-C Free Software License Agreement (CECILL-C)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["thin-layer", "shallow-water", "display", "simulation", "model", "processing", "benchmark"]
dependencies = [
    "seaborn", "requests", "scipy"
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest"]
dev = ["pipreqs"]
gis = ["rasterio", "shapely"]

[tools.setuptools]
packages = ["src"]

[project.urls]
Homepage = "https://github.com/marcperuz/tilupy"

[project.scripts]
tilupy_plot = "tilupy.cmd:_tilupy_plot"
tilupy_to_raster = "tilupy.cmd:_tilupy_to_raster"

[tool.pytest.ini_options]
pythonpath = ["src"]
